Making AVL module code compatible with Vassal 3.6.19 (removed all deprecation warnings). Changed version in pom to 4.4.6 to match new module.